@@ -36,6 +36,9 @@ public class PreferenceInitializer extends AbstractPreferenceInitializer
 		final IPreferenceStore ps = Activator.getDefault().getPreferenceStore();
 		ps.setDefault("SHOW_COMMENTS", false); //$NON-NLS-1$
 		
+		ps.setDefault("ObjectBrowser.showFilter", true); //$NON-NLS-1$
+		ps.setDefault("ObjectBrowser.showStatusIndicator", false); //$NON-NLS-1$
+		
 		ps.setDefault("ObjectStatusIndicator.showIcons", false); //$NON-NLS-1$
 		ps.setDefault("ObjectStatusIndicator.hideNormal", true); //$NON-NLS-1$
 		ps.setDefault("ObjectStatusIndicator.hideUnmanaged", true); //$NON-NLS-1$
